# 3b

./: .env  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  app.py  config.yml  install_dependencies.py  pyproject.toml  requirements.txt  setup.py  train.py
.github/workflows/: ci_cd.yml
config/: config.yaml  config.yaml.example  training_config.yaml
deployment/argocd/: application.yaml  notifications.yaml  project.yaml
deployment/backup/: velero-schedule.yaml
deployment/cost-optimization/: autoscaling.yaml  resource-quotas.yaml  spot-config.yaml
deployment/data-pipeline/: data-ingestion.yaml  data-processor.yaml  minio-config.yaml
deployment/disaster-recovery/: backup-config.yaml  failover.yaml  restore-config.yaml
deployment/istio/: authorization-policy.yaml  destination-rule.yaml  gateway.yaml  virtual-service.yaml
deployment/kubernetes/: values.yaml
deployment/monitoring/: grafana-values.yaml  prometheus-values.yaml
deployment/security/: network-policies.yaml  pod-security-policy.yaml
docs/: api-reference.md  ci-cd.md  cost-optimization.md  developer-guide.md  disaster-recovery.md  model-training.md  service-mesh.md
models/image2shape/: image2shape_model.py  model_config.yaml
models/otuken3d/: README.md  model.py  text2shape_model_meta.json
models/text2shape/: model_config.yaml  text2shape_model.py
modules/: README.md  __init__.py
scripts/: config.yaml  kurulum.sh  python_kur.py  setup.py  setup_point_e.py  yukleme.py
src/: __init__.py  main.py
tests/: test_model_generator.py
utils/: README.md  config.py  logging.py
(+169 files in other folders)
