[build-system]
requires = ["setuptools>=45", "wheel", "pip>=21"]
build-backend = "setuptools.build_meta"

[project]
name = "otuken3d"
version = "0.1.0"
description = "Genel amaçlı 3D model üretim sistemi"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Kılıç", email = "kilic@example.com"},
]

[project.urls]
Homepage = "https://github.com/yourusername/otuken3d"
Documentation = "https://otuken3d.readthedocs.io"
Repository = "https://github.com/yourusername/otuken3d.git"

[tool.setuptools]
packages = ["modules"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["modules"]
omit = ["tests/*"]